Add issue about syntax agnosticism and URL property mapping.

--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -205,6 +205,10 @@ signature nodes, but that type on its own doesn't specify any default
 signature or hash algorithms, those must be given via other properties in the
 nodes.</div>
 
+<div class="issue">Specify that Linked Data documents are syntax agnostic.
+Specify the URLs that property values like <code>signature</code> map to,
+for instance, in the security vocabulary.</div>
+
       <dl style="margin-left: 1em;">
         <dt><code>type</code><dt>
         <dd><code>LinkedDataSignature2015</code></dd>
