Add "anti-universal entity/key" issue.

--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -209,6 +209,14 @@ nodes.</div>
 Specify the URLs that property values like <code>signature</code> map to,
 for instance, in the security vocabulary.</div>
 
+<div class="issue">Add a note indicating that this specification should not
+be construed to indicate that public key owners should be restricted to a
+single public key or that systems that use this spec and involve real people
+should identify each person as only ever being a single entity rather than
+perhaps N entities with M keys. There are no such restrictions and in many
+cases those kinds of restrictions are ill-advised due to privacy
+considerations.</div>
+
       <dl style="margin-left: 1em;">
         <dt><code>type</code><dt>
         <dd><code>LinkedDataSignature2015</code></dd>
