--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -216,7 +216,7 @@ to particular target, identified by the specified <a>domain</a>.
         <dt><dfn>signature suite</dfn></dt>
         <dd>
 A specified set of cryptographic primitives typically consisting of
-a normalization algorithm, a message digest algorithm, and a signature
+a canonicalization algorithm, a message digest algorithm, and a signature
 algorithm that are bundled together by cryptographers for developers
 for the purposes of safety and convenience.
         </dd>
@@ -226,11 +226,11 @@ A set of options that is included in the signature data. These options may
 be a <a>domain</a>, <a>nonce</a>, or other data that is specific to the
 signature format.
         </dd>
-        <dt><dfn>normalization algorithm</dfn></dt>
+        <dt><dfn>canonicalization algorithm</dfn></dt>
         <dd>
 An algorithm that takes an input document that has more than one possible
-representation and always transforms it into a normal form. This process is
-sometimes also called canonicalization.
+representation and always transforms it into a canonical form. This process is
+sometimes also called normalization.
         </dd>
         <dt><dfn>message digest algorithm</dfn></dt>
         <dd>
@@ -407,9 +407,9 @@ For example: <code>https://w3id.org/security#LinkedDataSignature2015</code>.
         <dd>
 The value <code>SignatureSuite</code>.
         </dd>
-        <dt>normalizationAlgorithm</dt>
+        <dt>canonicalizationAlgorithm</dt>
         <dd>
-A URL that identifies the <a>normalization algorithm</a> to use on the
+A URL that identifies the <a>canonicalization algorithm</a> to use on the
 <var>document</var>. For example:
 <code>https://w3id.org/security#URDNA2015</code>.
         </dd>
@@ -435,7 +435,7 @@ A complete example of a <a>signature suite</a> is shown in the next example:
 {
   "id": "https://w3id.org/security#LinkedDataSignature2015",
   "type": "SignatureSuite",
-  "normalizationAlgorithm": "https://w3id.org/security#URDNA2015",
+  "canonicalizationAlgorithm": "https://w3id.org/security#URDNA2015",
   "digestAlgorithm": "http://example.com/digests#sha512",
   "signatureAlgorithm": "http://www.w3.org/2000/09/xmldsig#rsa-sha256"
 }
@@ -447,7 +447,7 @@ A complete example of a <a>signature suite</a> is shown in the next example:
 
       <p>
 The algorithms defined below are generalized in that they require a specific
-<a>normalization algorithm</a>, <a>message digest algorithm</a>, and
+<a>canonicalization algorithm</a>, <a>message digest algorithm</a>, and
 <a>signature algorithm</a> to be used to achieve the algorithm's intended
 outcome.
       </p>
@@ -483,7 +483,7 @@ Remove any <code>signature</code> nodes from the default graph in
           </li>
           <li>
 Generate a <var>normalized document</var> by normalizing
-<var>document</var> according to a <a>normalization algorithm</a>
+<var>document</var> according to a <a>canonicalization algorithm</a>
 (e.g. the <em>URDNA2015</em> [[!RDF-DATASET-NORMALIZATION]] algorithm).
         </li>
           <li>
@@ -548,7 +548,7 @@ Remove any <code>signature</code> nodes from the default graph in
           </li>
           <li>
 Generate a <var>normalized document</var> by normalizing
-<var>document</var> according to the <a>normalization algorithm</a>
+<var>document</var> according to the <a>canonicalization algorithm</a>
 (e.g. the </var><em>URDNA2015</em> [[!RDF-DATASET-NORMALIZATION]] algorithm).
           </li>
           <li>
@@ -572,7 +572,7 @@ boolean value.
 The following algorithm specifies how to create the data that is used
 to generate or verify a digital signature. It takes a normalized
 <a>linked data document</a>, <var>normalized document</var>,
-<a>normalization algorithm</a>, a <a>message digest algorithm</a>, and
+<a>canonicalization algorithm</a>, a <a>message digest algorithm</a>, and
 a <a>signature options document</a>, <var>input options</var> (by reference).
 The <a>signature options document</a> MUST contain an identifier for the
 public/private key pair, <var>creator</var>, and an ISO8601 combined date and
@@ -603,7 +603,7 @@ Generate <var>output</var> by:
             <ol class="algorithm">
               <li>
 Creating a <var>normalized options document</var> by normalizing
-<var>options</var> according to the <a>normalization algorithm</a>
+<var>options</var> according to the <a>canonicalization algorithm</a>
 (e.g. the <em>URDNA2015</em> [[!RDF-DATASET-NORMALIZATION]] algorithm).
               </li>
               <li>
