--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -235,10 +235,11 @@ sometimes also called normalization.
         <dt><dfn>message digest algorithm</dfn></dt>
         <dd>
 An algorithm that takes an input message and produces a cryptographic
-output message that is often times many orders of magnitude smaller than the
+output message that is often many orders of magnitude smaller than the
 input message. These algorithms are often 1) very fast, 2)
-non-reversible, 3) change when even one bit of the input message changes, and
-4) produce different outputs for different inputs.
+non-reversible, 3) cause the output to change significantly when even one
+bit of the input message changes, and 4) make it infeasible to find two
+different inputs for the same output.
         </dd>
         <dt><dfn>signature algorithm</dfn></dt>
         <dd>
