--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -244,8 +244,8 @@ different inputs for the same output.
         <dt><dfn>signature algorithm</dfn></dt>
         <dd>
 An algorithm that takes an input message and produces an output value where the
-receiver of the message can mathematically verify that the message came from
-a particular sender and has not been modified in transit.
+receiver of the message can mathematically verify that the message has not
+been modified in transit and came from someone possessing a particular secret.
         </dd>
       </dl>
 
