Add issue about checking key type to ensure proper use.

--- a/specs/source/ld-signatures/index.html
+++ b/specs/source/ld-signatures/index.html
@@ -378,6 +378,10 @@ perhaps N entities with M keys. There are no such restrictions and in many
 cases those kinds of restrictions are ill-advised due to privacy
 considerations.</div>
 
+<div class="issue">Add an explicit check on key type to prevent an
+attacker from selecting an algorithm that may abuse how the key is
+used/interpreted.</div>
+
     </section>
 
     <section>
