Add issue regarding `proof` term ambiguity.

--- a/specs/source/pop2016/index.html
+++ b/specs/source/pop2016/index.html
@@ -195,6 +195,12 @@ know what information to include in the merkle leaf nodes when generating the
 hash? Do you just include all of it? Is it okay to select the same
 message digest algorithm as what's used in the active signature suite?
       </p>
+
+      <p class="issue">
+The term "proof" is not specific enough. It should either be made more
+specific or replaced with something like `merklePath` should it be determined
+that a full path is necessary for security.
+      </p>
       <p>
 To generate the proof of publication, perform the following steps:
       </p>
