--- a/specs/source/lds-koblitz2016/index.html
+++ b/specs/source/lds-koblitz2016/index.html
@@ -80,28 +80,28 @@
             title:    "RDF Dataset Normalization 1.0",
             href:     "http://json-ld.github.io/normalization/spec/",
             authors:  ["David Longley", "Manu Sporny"],
-            status:   "CGDRAFT",
+            status:   "CG-DRAFT",
             publisher:  "JSON-LD Community Group"
           },
           "SECURITY-VOCABULARY": {
             title:    "Security Linked Data Vocabulary",
             href:     "https://web-payments.org/vocabs/security",
             authors:  ["Manu Sporny","David Longley"],
-            status:   "CGDRAFT",
+            status:   "CG-DRAFT",
             publisher:  "Web Payments Community Group"
           },
           "LD-SIGNATURES": {
             title:    "Linked Data Signatures 1.0",
             href:     "https://web-payments.org/specs/source/ld-signatures/",
             authors:  ["David Longley", "Manu Sporny"],
-            status:   "CGDRAFT",
+            status:   "CG-DRAFT",
             publisher:  "Web Payments Community Group"
           },
           "SEC2": {
             title:    "Standards for Efficient Cryptography 2 (SEC 2)",
             href:     "http://www.secg.org/sec2-v2.pdf",
             authors:  ["Daniel R. L. Brown"],
-            status:   "CGDRAFT",
+            status:   "Corporate Publication",
             publisher:  "Certicom Corporation"
           }
         }
