--- a/specs/source/lds-koblitz2016/index.html
+++ b/specs/source/lds-koblitz2016/index.html
@@ -63,7 +63,7 @@
         wgURI:        "http://www.w3.org/community/webpayments/",
 
         // name (with the @w3c.org) of the public mailing to which comments are due
-        wgPublicList: "public-webpayments@w3.org",
+        wgPublicList: "public-webpayments",
 
         // URI of the patent status for this WG, for Rec-track documents
         // !!!! IMPORTANT !!!!
@@ -75,6 +75,19 @@
         /*preProcess: [ webpayments.preProcess ],
         alternateFormats: [ {uri: "diff-20111214.html", label: "diff to previous version"} ],
         */
+        otherLinks: [{
+          key: "Source control",
+          data: [{
+            value: "https://github.com/web-payments/web-payments.org/",
+            href: "https://github.com/web-payments/web-payments.org/issues/"
+          }]
+        }, {
+          key: "Issue Tracker",
+          data: [{
+            value: "https://github.com/web-payments/web-payments.org/issues/",
+            href: "https://github.com/web-payments/web-payments.org/issues/"
+          }]
+        }],
         localBiblio:  {
           "RDF-DATASET-NORMALIZATION": {
             title:    "RDF Dataset Normalization 1.0",
